--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,25 @@ lambdaKG/*.7z
 */*.tsv
 */wandb
 lambdaKG/*
+**/.ipynb_checkpoints/*
+**/.virtual_documents/*
+assets/.METADATA/job_run.*
+assets/job_run
+assets/.METADATA/auto_ml.*
+assets/auto_ml
+assets/.METADATA/experiment.*
+assets/.METADATA/wml_experiment.*
+assets/experiment
+assets/.METADATA/wml_training_definition.*
+assets/wml_training_definition
+assets/.METADATA/wml_remote_training_system.*
+assets/wml_remote_training_system
+assets/federated_learning
+__pypackages__/
+*.py,cover
+cover/
+db.sqlite3-journal
+.pybuilder/
+celerybeat.pid
+.pytype/
+cython_debug/
